--- a/style.css
+++ b/style.css
@@ -28,3 +28,11 @@ body {
 h1 {
   color: rgb(33, 95, 101);
 }
+
+#ny {
+  padding: 10px;
+  margin: 5px;
+  font-size: 25px;
+  text-shadow: 1px 1px 3px gray;
+  color: rgb(73, 25, 25);
+}
